add trans_default_domain examples and fix translation keys

--- a/src/espend/Translation/DomainBundle/Resources/views/Default/index.html.twig
+++ b/src/espend/Translation/DomainBundle/Resources/views/Default/index.html.twig
@@ -18,4 +18,4 @@
 {{ 'xlf_weak.symfony.great'|trans({}, 'WeakInterchange') }}
 
 {# not supported ! #}
-{{ 'gettext_weak.symfony.great'|trans({}, 'GetText') }}
+{{ 'gettext_weak.symfony.great'|trans({}, 'WeakGetText') }}
