add trans_default_domain test

--- a/src/espend/Translation/DomainBundle/Resources/views/Default/TransDefaultDomain2.html.twig
+++ b/src/espend/Translation/DomainBundle/Resources/views/Default/TransDefaultDomain2.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "GetText" %}
+{% trans_default_domain "Yaml" %}
 
 {# should provide completion  #}
-{{ 'gettext.symfony.great'|trans }}
+{{ 'yaml.symfony.great'|trans }}
