add some more overall test cases

--- a/src/espend/Twig/TemplateBundle/Resources/views/Default/overwrite.html.twig
+++ b/src/espend/Twig/TemplateBundle/Resources/views/Default/overwrite.html.twig
@@ -16,4 +16,4 @@
 {% include ':folder/app_foo.html.twig' %}
 {% include ':folder\app_foo.html.twig' %}
 
-{% include 'espendTwigTemplateBundle:Default:index.html.twig' %}
+{% include 'espendTwigTemplateBundle:Default:overwrite.html.twig' %}
