reflect route indexer changes

--- a/src/espend/Router/RoutesBundle/Resources/views/Default/index.html.twig
+++ b/src/espend/Router/RoutesBundle/Resources/views/Default/index.html.twig
@@ -9,3 +9,9 @@
 
 {# should not be in index #}
 {{ path('espend_router_weak_route_invalid_index') }}
+
+{# xml indexer and controller goto #}
+{{ path('espend_router_routes_xml_index') }}
+
+{# completion should extend path with parameter #}
+<a href="espend_router_routes_xml_index"></a>
