add embed and include function testing

--- a/src/espend/Twig/TemplateBundle/Resources/views/html_shortcut.html.twig
+++ b/src/espend/Twig/TemplateBundle/Resources/views/html_shortcut.html.twig
@@ -1,4 +1,5 @@
 {# twig shortcut attributes #}
-<a href="">#</a>
+<a href="{{ path('blog_show', {'slug': 'x'}) }}">#</a>
 <link href="" rel="stylesheet" />
 <script src=""></script>
+
